--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,82 @@ body {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 ul,
 ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style-type: none;
 }
+
 a {
   text-decoration: none;
 }
+
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+
+  width: 1158px;
+
+  /* outline: solid red; */
+}
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  margin: 0;
+  /* outline: solid #404bbf; */
+}
+
 /*Header*/
 
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+
+  background: #fff;
+}
+
+/* Main nav */
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 /*Logo*/
+
+.header-logo {
+  display: inline-flex;
+  align-items: center;
+  flex-shrink: 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
+  width: auto;
+  height: 24px;
+}
+
 .nav-logo {
   color: #4d5ae5;
   font-family: Raleway, sans-serif;
@@ -30,12 +96,42 @@ a {
 
 /*Menu nav*/
 
+.site-nav {
+  display: flex;
+  margin-left: 76px;
+}
+
+/* .site-nav .item {
+  /* background-color: tomato; */
+/* margin-right: 40px;
+}
+
+.site-nav .item:last-child {
+  margin-right: 0;} */
+
+.site-nav .item:not(:last-child) {
+  margin-right: 40px;
+}
+
+/* .site-nav .item + .item {
+  margin-left: 40px;
+} */
+
+/*Menu link*/
 .nav-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5rem;
   letter-spacing: 0.02rem;
+}
+
+.nav-link:last-child {
+  margin-right: 0;
 }
 
 .nav-link:hover,
@@ -44,7 +140,11 @@ a {
 }
 
 /* Contacts */
+
 .address {
+  display: flex;
+  margin-left: auto;
+
   font-style: normal;
 }
 
@@ -60,14 +160,27 @@ a {
   color: #404bbf;
 }
 
+/* Contacts-list */
+.contacts-list {
+  display: flex;
+  /* margin-left: auto; */
+}
+.contacts-list .item:not(:last-child) {
+  margin-right: 40px;
+}
+
 /* Main content */
 
 /* Section 1 */
-.main-page {
+.hero {
+  text-align: center;
+
   background-color: #2e2f42;
 }
-/* Header 1 */
+
 .page-title {
+  margin-bottom: 48px;
+
   color: #fff;
   text-align: center;
   font-size: 3.5rem;
@@ -77,14 +190,18 @@ a {
 }
 
 .main-button {
-  /* Button Text */
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169;
+  text-align: center;
+
+  background-color: #4d5ae5;
   color: #fff;
   font-family: Roboto, sans-serif;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5rem; /* 150% */
   letter-spacing: 0.04rem;
-  background-color: #4d5ae5;
   cursor: pointer;
 }
 
@@ -94,7 +211,24 @@ a {
 }
 
 /* Section 2 Advantages*/
+
+/* Flex feature-list */
+
+.feature-list {
+  display: flex;
+  gap: 24px;
+}
+
+.feature-list .item {
+  display: flex;
+  width: 264px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
 .advantages-title {
+  margin-bottom: 72px;
   color: #2e2f42;
   text-align: center;
   font-size: 2.25rem;
@@ -102,6 +236,22 @@ a {
   line-height: 2.5rem;
   letter-spacing: 0.045rem;
 }
+
+/* Visually-hidden */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .feature-title {
   color: #2e2f42;
   font-size: 1.25rem;
@@ -117,11 +267,14 @@ a {
   line-height: 1.5rem;
   letter-spacing: 0.02rem;
 }
+
 /* Section 3 Our Team */
 .team {
   background-color: #f4f4fd;
 }
 .team-title {
+  margin-bottom: 72px;
+
   color: #2e2f42;
   text-align: center;
   font-size: 2.25rem;
@@ -130,9 +283,33 @@ a {
   letter-spacing: 0.045rem;
   text-transform: capitalize;
 }
-.team-card {
+
+.card-set {
+  display: flex;
+  gap: 24px;
+}
+
+.card-set .item {
+  display: inline-flex;
+  width: calc((100% - 72px) / 4);
+  padding-bottom: 32px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+
   background-color: #fff;
 }
+
+.card-content {
+  display: flex;
+  width: 232px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
 .team-card-title {
   color: #2e2f42;
   text-align: center;
@@ -151,10 +328,12 @@ a {
 }
 
 /* Section 4 Our Portfolio */
-.project {
+.portfolio {
   background-color: #fff;
 }
 .project-title {
+  margin-bottom: 72px;
+
   color: #2e2f42;
   text-align: center;
   font-size: 2.25rem;
@@ -163,9 +342,49 @@ a {
   letter-spacing: 0.045rem;
   text-transform: capitalize;
 }
-.project-card {
+
+.project-set {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+/* .thumb img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+} */
+
+.project-set .item {
+  display: flex;
+  width: 360px;
+  /* height: 420px; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-shrink: 0;
+
   background-color: #fff;
 }
+
+.project-set .card-content {
+  display: flex;
+  width: 100%;
+  /* height: 120px; */
+  padding: 32px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 8px;
+  flex-shrink: 0;
+  align-self: stretch;
+
+  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+}
+
 .project-card-title {
   color: #2e2f42;
   font-size: 1.25rem;
@@ -181,12 +400,32 @@ a {
   letter-spacing: 0.02rem;
 }
 
-/* Footer */
+/* Section Footer */
 .footer {
   background-color: #2e2f42;
 }
 
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 16px;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 /* Logo */
+
+.second-logo-content {
+  display: flex;
+  height: 24px;
+
+  align-items: center;
+  flex-shrink: 0;
+  padding: 0;
+}
+
 .footer-logo {
   color: #4d5ae5;
   font-family: Raleway, sans-serif;
@@ -200,9 +439,13 @@ a {
   color: #f4f4fd;
 }
 .footer-text {
+  width: 264px;
+
   color: #f4f4fd;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
   letter-spacing: 0.02rem;
+
+  /* outline: solid tomato; */
 }
