--- a/css/styles.css
+++ b/css/styles.css
@@ -174,12 +174,15 @@ a {
 /* Section 1 */
 .hero {
   text-align: center;
+  padding-top: 188px;
+  padding-bottom: 188px;
 
   background-color: #2e2f42;
 }
 
 .page-title {
   margin-bottom: 48px;
+  max-width: 496;
 
   color: #fff;
   text-align: center;
@@ -190,9 +193,19 @@ a {
 }
 
 .main-button {
-  border-radius: 4px;
+  display: inline-flex;
   padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10px;
+
+  /* display: block;
+  margin: 0 auto; */
+
+  border: none;
+  border-radius: 4px;
+  /* padding: 16px 32px; */
   min-width: 169;
+  height: 56px;
   text-align: center;
 
   background-color: #4d5ae5;
@@ -212,7 +225,44 @@ a {
 
 /* Section 2 Advantages*/
 
-/* Flex feature-list */
+.advantages-title {
+  margin-bottom: 72px;
+
+  color: #2e2f42;
+  text-align: center;
+  font-size: 2.25rem;
+  font-weight: 700;
+  line-height: 2.5rem;
+  letter-spacing: 0.045rem;
+}
+
+.advantages-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* Visually-hidden */
+
+/* .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+} */
 
 .feature-list {
   display: flex;
@@ -225,31 +275,6 @@ a {
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-}
-
-.advantages-title {
-  margin-bottom: 72px;
-  color: #2e2f42;
-  text-align: center;
-  font-size: 2.25rem;
-  font-weight: 700;
-  line-height: 2.5rem;
-  letter-spacing: 0.045rem;
-}
-
-/* Visually-hidden */
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 .feature-title {
@@ -298,6 +323,8 @@ a {
   align-items: center;
   gap: 32px;
 
+  border-radius: 0px 0px 4px 4px;
+
   background-color: #fff;
 }
 
@@ -308,6 +335,9 @@ a {
   justify-content: center;
   align-items: center;
   gap: 8px;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .team-card-title {
@@ -368,7 +398,7 @@ a {
   background-color: #fff;
 }
 
-.project-set .card-content {
+.set-content {
   display: flex;
   width: 100%;
   /* height: 120px; */
@@ -402,28 +432,31 @@ a {
 
 /* Section Footer */
 .footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+
   background-color: #2e2f42;
 }
 
-.footer-content {
+/* .footer-content {
   display: flex;
   flex-wrap: wrap;
   row-gap: 16px;
 
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-}
+  align-items: flex-start; */
+/* } */
 
 /* Logo */
 
-.second-logo-content {
-  display: flex;
-  height: 24px;
-
-  align-items: center;
-  flex-shrink: 0;
-  padding: 0;
+.footer-logo-content {
+  display: inline-block;
+  margin-bottom: 16px;
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
+  /* height: 24px; */
 }
 
 .footer-logo {
