--- a/css/styles.css
+++ b/css/styles.css
@@ -451,12 +451,15 @@ a {
 /* Logo */
 
 .footer-logo-content {
-  display: inline-block;
+  display: inline-flex;
+  height: 24px;
+  align-items: center;
+  flex-shrink: 0;
+
   margin-bottom: 16px;
   padding-left: 0;
   padding-right: 0;
   width: 100%;
-  /* height: 24px; */
 }
 
 .footer-logo {
