--- a/css/styles.css
+++ b/css/styles.css
@@ -62,14 +62,14 @@ a {
   align-items: center;
 }
 
-.nav {
+.nav-content {
   display: flex;
   align-items: center;
 }
 
 /*Logo*/
 
-.header-logo {
+/* .header-logo {
   display: inline-flex;
   align-items: center;
   flex-shrink: 0;
@@ -78,9 +78,16 @@ a {
 
   width: auto;
   height: 24px;
-}
+} */
 
 .nav-logo {
+  display: block;
+  width: auto;
+  height: 24px;
+  /* padding-top: 24px; */
+  padding-bottom: 24px;
+  margin-right: 76px;
+
   color: #4d5ae5;
   font-family: Raleway, sans-serif;
   font-size: 1.125rem;
@@ -98,7 +105,7 @@ a {
 
 .site-nav {
   display: flex;
-  margin-left: 76px;
+  /* margin-left: 76px; */
 }
 
 /* .site-nav .item {
@@ -160,7 +167,6 @@ a {
   color: #404bbf;
 }
 
-/* Contacts-list */
 .contacts-list {
   display: flex;
   /* margin-left: auto; */
@@ -182,7 +188,9 @@ a {
 
 .page-title {
   margin-bottom: 48px;
-  max-width: 496;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 
   color: #fff;
   text-align: center;
@@ -193,19 +201,14 @@ a {
 }
 
 .main-button {
-  display: inline-flex;
+  display: block;
   padding: 16px 32px;
-  align-items: flex-start;
-  gap: 10px;
-
-  /* display: block;
-  margin: 0 auto; */
-
+  min-width: 169px;
+  height: 56px;
+  margin: 0 auto;
   border: none;
   border-radius: 4px;
-  /* padding: 16px 32px; */
-  min-width: 169;
-  height: 56px;
+
   text-align: center;
 
   background-color: #4d5ae5;
@@ -226,7 +229,7 @@ a {
 /* Section 2 Advantages*/
 
 .advantages-title {
-  margin-bottom: 72px;
+  margin-bottom: 8px;
 
   color: #2e2f42;
   text-align: center;
@@ -315,32 +318,25 @@ a {
 }
 
 .card-set .item {
-  display: inline-flex;
   width: calc((100% - 72px) / 4);
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 32px;
-
   border-radius: 0px 0px 4px 4px;
 
   background-color: #fff;
 }
 
 .card-content {
-  display: flex;
-  width: 232px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-
+  width: auto;
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
 .team-card-title {
+  margin-bottom: 8px;
+
   color: #2e2f42;
   text-align: center;
   font-size: 1.25rem;
@@ -387,8 +383,7 @@ a {
 } */
 
 .project-set .item {
-  display: flex;
-  width: 360px;
+  width: calc((100% - 48px) / 3);
   /* height: 420px; */
   flex-direction: column;
   justify-content: center;
@@ -399,23 +394,15 @@ a {
 }
 
 .set-content {
-  display: flex;
-  width: 100%;
+  width: auto;
   /* height: 120px; */
   padding: 32px 16px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 8px;
-  flex-shrink: 0;
-  align-self: stretch;
-
-  border-right: 1px solid #e7e9fc;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .project-card-title {
+  margin-bottom: 8px;
   color: #2e2f42;
   font-size: 1.25rem;
   font-weight: 500;
@@ -450,19 +437,10 @@ a {
 
 /* Logo */
 
-.footer-logo-content {
-  display: inline-flex;
-  height: 24px;
-  align-items: center;
-  flex-shrink: 0;
-
-  margin-bottom: 16px;
-  padding-left: 0;
-  padding-right: 0;
-  width: 100%;
-}
-
 .footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
+
   color: #4d5ae5;
   font-family: Raleway, sans-serif;
   font-size: 1.125rem;
