--- a/css/styles.css
+++ b/css/styles.css
@@ -69,23 +69,12 @@ a {
 
 /*Logo*/
 
-/* .header-logo {
-  display: inline-flex;
-  align-items: center;
-  flex-shrink: 0;
-  padding-top: 24px;
-  padding-bottom: 24px;
-
-  width: auto;
-  height: 24px;
-} */
-
 .nav-logo {
   display: block;
   width: auto;
-  height: 24px;
-  /* padding-top: 24px; */
-  padding-bottom: 24px;
+  /* height: 24px; */
+  /* padding-top: 24px;
+  padding-bottom: 24px; */
   margin-right: 76px;
 
   color: #4d5ae5;
@@ -105,7 +94,6 @@ a {
 
 .site-nav {
   display: flex;
-  /* margin-left: 76px; */
 }
 
 /* .site-nav .item {
@@ -229,8 +217,6 @@ a {
 /* Section 2 Advantages*/
 
 .advantages-title {
-  margin-bottom: 8px;
-
   color: #2e2f42;
   text-align: center;
   font-size: 2.25rem;
@@ -273,14 +259,12 @@ a {
 }
 
 .feature-list .item {
-  display: flex;
-  width: 264px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
+  width: calc((100% - 72px) / 4);
 }
 
 .feature-title {
+  margin-bottom: 8px;
+
   color: #2e2f42;
   font-size: 1.25rem;
   font-weight: 500;
@@ -319,10 +303,6 @@ a {
 
 .card-set .item {
   width: calc((100% - 72px) / 4);
-  /* padding-bottom: 32px; */
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   border-radius: 0px 0px 4px 4px;
 
   background-color: #fff;
@@ -376,19 +356,8 @@ a {
   column-gap: 24px;
 }
 
-/* .thumb img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-} */
-
 .project-set .item {
   width: calc((100% - 48px) / 3);
-  /* height: 420px; */
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  flex-shrink: 0;
 
   background-color: #fff;
 }
